--- a/src/index.html
+++ b/src/index.html
@@ -5,15 +5,12 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="x-ua-compatible" content="ie=edge" />
-  <link rel="icon" href="./images/favicon.ico" type="icon">
-  <link rel="stylesheet" href="./styles/index.css">
   <title>Антимусор</title>
 </head>
 
 <body>
+  <h1>Hello</h1>
 
-
-  <script src="./index.js"></script>
 </body>
 
 </html>
