add: first mark on map

--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,27 @@
 </head>
 
 <body>
-  <h1>Hello</h1>
+  <header class="header" id="header">
+    <h1>Антимусор</h1>
+  </header>
+  <div class="wrap" id="wrap">
+
+
+    <div class="filter" id="filter">
+      <p>1</p>
+    </div>
+
+    <div class="right_panel" id="right_panel">
+      <div class="map" id="map"></div>
+      <div class="list hidden " id="list">3</div>
+    </div>
+
+
+  </div>
+
+  <footer>4</footer>
+
+
 
 </body>
 
