feat: adjust basic markup

--- a/src/index.html
+++ b/src/index.html
@@ -9,28 +9,31 @@
 </head>
 
 <body>
-  <header class="header" id="header">
-    <h1>Антимусор</h1>
-  </header>
-  <div class="wrap" id="wrap">
-
-
-    <div class="filter" id="filter">
-      <p>1</p>
+  <div class="wrapper">
+    <div class="wrapper__content">
+      <header class="header" id="header">
+        <div class="cont">
+          <h1 class="page-title">Антимусор</h1>
+        </div>
+      </header>
+      <main class="wrap" id="wrap">
+          <div class="filter" id="filter">
+            <p>1</p>
+          </div>
+        
+          <div class="right_panel" id="right_panel">
+            <div class="map" id="map"></div>
+            <div class="list hidden" id="list">3</div>
+          </div>
+      </main>
     </div>
-
-    <div class="right_panel" id="right_panel">
-      <div class="map" id="map"></div>
-      <div class="list hidden " id="list">3</div>
-    </div>
-
-
+    
+    <footer class="footer">
+      <div class="cont">
+        <p class="info">2020</p>
+      </div>
+    </footer>
   </div>
-
-  <footer>4</footer>
-
-
-
 </body>
 
 </html>
