--- a/src/index.html
+++ b/src/index.html
@@ -18,12 +18,21 @@
       </header>
       <main class="wrap" id="wrap">
           <div class="filter" id="filter">
-            <p>1</p>
+
+            <div class="filter__level-select">
+              <select id="level-select">
+                <option value="hide">Фильтр по уровню</option>  
+                <option value="all">Фильтр по уровню</option>  
+                <option value="green">Сделано</option>  
+                <option value="yellow">В работе</option>
+                <option value="red">Получено</option>
+            </select>
+            </div>
+
           </div>
         
           <div class="right_panel" id="right_panel">
             <div class="map" id="map"></div>
-            <div class="list hidden" id="list">3</div>
           </div>
       </main>
     </div>
