feat: implement initial table

--- a/src/index.html
+++ b/src/index.html
@@ -16,22 +16,22 @@
           <h1 class="page-title">Антимусор</h1>
         </div>
       </header>
-      <main class="wrap" id="wrap">
+      <main class="page" id="wrap">
           <div class="filter" id="filter">
             <p>1</p>
           </div>
         
-          <div class="right_panel" id="right_panel">
-            <div class="map" id="map"></div>
-            <div class="list hidden" id="list">3</div>
+          <div class="page__right" id="right_panel">
+            <div class="map hidden" id="map"></div>
+            <div class="page__right-table">
+              <table class="table table-hover" id="table"></table>
+            </div>
           </div>
       </main>
     </div>
     
     <footer class="footer">
-      <div class="cont">
-        <p class="info">2020</p>
-      </div>
+      <p class="footer__info">2021</p>
     </footer>
   </div>
 </body>
