--- a/src/index.html
+++ b/src/index.html
@@ -31,7 +31,9 @@
     </div>
     
     <footer class="footer">
-      <p class="footer__info">2021</p>
+      <div class="cont">
+        <p class="footer__info">2021</p>
+      </div>
     </footer>
   </div>
 </body>
