--- a/src/index.html
+++ b/src/index.html
@@ -17,26 +17,25 @@
         </div>
       </header>
       <main class="wrap" id="wrap">
-          <div class="filter" id="filter">
+        <div class="filter" id="filter">
 
-            <div class="filter__level-select">
-              <select id="level-select">
-                <option value="hide">Фильтр по уровню</option>  
-                <option value="all">Фильтр по уровню</option>  
-                <option value="green">Сделано</option>  
-                <option value="yellow">В работе</option>
-                <option value="red">Получено</option>
+          <div class="filter__level-select">
+            <select>
+              <option value="hide">Фильтр по уровню</option>
+              <option value="all">Фильтр по уровню</option>
+              <option value="green">Сделано</option>
+              <option value="yellow">В работе</option>
+              <option value="red">Получено</option>
             </select>
-            </div>
+          </div>
+        </div>
 
-          </div>
-        
-          <div class="right_panel" id="right_panel">
-            <div class="map" id="map"></div>
-          </div>
+        <div class="right_panel" id="right_panel">
+          <div class="map" id="map"></div>
+        </div>
       </main>
     </div>
-    
+
     <footer class="footer">
       <div class="cont">
         <p class="info">2020</p>
