--- a/src/index.html
+++ b/src/index.html
@@ -17,22 +17,22 @@
         </div>
       </header>
       <main class="page" id="wrap">
-        <div class="filter" id="filter">
+        <div class="filter" id="filter">         
           <div class="filter__level-select">
             <select>
-              <option value="hide">Фильтр по уровню</option>
-              <option value="all">Фильтр по уровню</option>
-              <option value="green">Сделано</option>
-              <option value="yellow">В работе</option>
-              <option value="red">Получено</option>
+              <option value="hide">Фильтр по статусу</option>
+              <option value="all">Фильтр по статусу</option>
+              <option value="done">Сделано</option>
+              <option value="pending">В работе</option>
+              <option value="new">Получено</option>
             </select>
           </div>
         </div>
         
         <div class="page__right" id="right_panel">
-          <div class="map hidden" id="map"></div>
-          <div class="page__right-table">
-            <table class="table table-hover" id="table"></table>
+          <div class="map" id="map"></div>
+          <div class="page__right-table hidden">
+            <table class="table table-hover " id="table"></table>
           </div>
         </div>
       </main>
