feat: delete unused dataset

--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,7 @@
       </header>
       <main class="page" id="wrap">
         <div class="filter" id="filter">         
-          <div data-filterAction="status" class="filter__level-select">
+          <div class="filter__level-select">
             <select>
               <option value="hide">По статусу</option>
               <option value="all">По статусу</option>
@@ -28,7 +28,7 @@
             </select>
           </div>
 
-          <div data-filterAction="type" class="filter__type-select">
+          <div class="filter__type-select">
             <select>
               <option value="hide">По типу</option>
               <option value="all">По типу</option>
