feat: chage constant path, fix table name property

--- a/src/index.html
+++ b/src/index.html
@@ -41,8 +41,8 @@
         </div>
         
         <div class="page__right" id="right_panel">
-          <div class="map" id="map"></div>
-          <div class="page__right-table hidden">
+          <div class="map hidden" id="map"></div>
+          <div class="page__right-table">
             <table class="table table-hover " id="table"></table>
           </div>
         </div>
