feat: add overlay and popup template

--- a/src/index.html
+++ b/src/index.html
@@ -44,6 +44,18 @@
       </div>
     </footer>
   </div>
-</body>
 
+  <div class="overlay overlay--visible" id="overlay"></div>
+
+  <div class="popup">
+    <a href="#" class="close-button" id="button_close__popup">
+      <svg class="close-button__icon">
+        <use xlink:href="images/sprite.svg#close"></use>
+    </svg>
+    </a>
+    <div class="popup__content">
+      <img src="./images/001.jpg" alt="" class="popup__photo">
+    </div>
+  </div>
+</body>
 </html>
