feat: add popup with photo

--- a/src/index.html
+++ b/src/index.html
@@ -56,16 +56,16 @@
     </footer>
   </div>
 
-  <div class="overlay overlay--visible" id="overlay"></div>
+  <div class="overlay" id="overlay"></div>
 
-  <div class="popup">
+  <div class="popup" id="popup">
     <a href="#" class="close-button" id="button_close__popup">
       <svg class="close-button__icon">
         <use xlink:href="images/sprite.svg#close"></use>
     </svg>
     </a>
     <div class="popup__content">
-      <img src="./images/001.jpg" alt="" class="popup__photo">
+      <img src="./images/001.jpg" alt="" class="popup__photo" id="popup-photo">
     </div>
   </div>
 </body>
