feat: add popup with video

--- a/src/index.html
+++ b/src/index.html
@@ -64,9 +64,7 @@
         <use xlink:href="images/sprite.svg#close"></use>
     </svg>
     </a>
-    <div class="popup__content">
-      <img src="./images/001.jpg" alt="" class="popup__photo" id="popup-photo">
-    </div>
+    <div class="popup__content" id="popup-content"></div>
   </div>
 </body>
 </html>
