feat: add styles for footer and header

--- a/src/index.html
+++ b/src/index.html
@@ -12,8 +12,14 @@
   <div class="wrapper">
     <div class="wrapper__content">
       <header class="header" id="header">
-        <div class="cont">
-          <h1 class="page-title">Антимусор</h1>
+        <div class="cont header__cont">
+          <h1 class="page-title">
+            <a href="#" class="header__logo">Антимусор</a>
+          </h1>
+          <a class="header__link" href="tg://resolve?domain=NikName">
+            <span class="header__link-text">Сообщить о проблеме </span>
+            <img class="header__link-icon" src="./images/telegram.png" alt="telegram">
+          </a>
         </div>
       </header>
       <main class="page" id="wrap">
@@ -50,8 +56,39 @@
     </div>
 
     <footer class="footer">
-      <div class="cont">
-        <p class="footer__info">2021</p>
+      <div class="cont footer__cont">
+        <ul class="footer__copy-list">
+          <li class="footer__copy-item">
+            <a href="https://github.com/mrmamont2011" class="footer__link" target="_blank">
+              <span class="footer__author">mrmamont</span>
+              <img src="./images/github.png" alt="github" class="footer__link-img">
+            </a>
+          </li>
+          <li class="footer__copy-item">
+            <a href="https://github.com/nikitashamkut" class="footer__link" target="_blank">
+              <span class="footer__author">nikitashamkut</span>
+              <img src="./images/github.png" alt="github" class="footer__link-img">
+            </a>
+          </li>
+          <li class="footer__copy-item">
+            <a href="https://github.com/Kvadeck" class="footer__link" target="_blank">
+              <span class="footer__author">Kvadeck</span>
+              <img src="./images/github.png" alt="github" class="footer__link-img">
+            </a>
+          </li>
+          <li class="footer__copy-item">
+            <a href="https://github.com/Suzie33" class="footer__link" target="_blank">
+              <span class="footer__author">Valentina Ponamareva</span>
+              <img src="./images/github.png" alt="github" class="footer__link-img">
+            </a>
+          </li>
+        </ul>
+        <div class="footer__course">
+          <a href="https://rs.school/js/" class="footer__link" target="_blank">
+            <img src="./images/rs_school_js.svg" alt="rs_school" class="footer__link-img--rsschool">
+          </a>
+        </div>
+        <span class="footer__info">2021</span>
       </div>
     </footer>
   </div>
