--- a/src/index.html
+++ b/src/index.html
@@ -40,14 +40,16 @@
           </div>
 
           <div class="filter__date-wrap">
-            <input id="filter-date" type="text" readonly="readonly" placeholder="По дате">
+            <div class="date__wrap">
+              <input id="filter-date" type="text" readonly="readonly" placeholder="По дате">
+            </div>
           </div>
         </div>
         
         <div class="page__right" id="right_panel">
           <div class="map" id="map"></div>
           <div class="page__right-table hidden">
-            <table class="table table-hover " id="table"></table>
+            <table class="table table-hover" id="table"></table>
           </div>
         </div>
       </main>
