feat: adjust styles

--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
           <h1 class="page-title">
             <a href="#" class="header__logo">Антимусор</a>
           </h1>
-          <a class="header__link" href="tg://resolve?domain=NikName">
+          <a class=" btn btn-primary header__link" href="tg://resolve?domain=NikName">
             <span class="header__link-text">Сообщить о проблеме </span>
             <img class="header__link-icon" src="./images/telegram.png" alt="telegram">
           </a>
