--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,7 @@
       </header>
       <main class="page" id="wrap">
         <div class="filter" id="filter">         
-          <div class="filter__level-wrap">
+          <div class="filter__status-wrap">
             <select>
               <option value="hide">По статусу</option>
               <option value="all">По статусу</option>
