feat: add page-toggle

--- a/src/index.html
+++ b/src/index.html
@@ -23,7 +23,20 @@
         </div>
       </header>
       <main class="page" id="wrap">
-        <div class="filter" id="filter">         
+        <div class="filter" id="filter">
+          <div class="toggle" id="toggle">
+            <span>Карта</span>
+            <input type="checkbox" id="toggle-input" class="toggle__input">
+            <label for="toggle-input" class="toggle__label">
+              <!-- <span class="toggle__mode toggle__mode--train">Train
+                <span class="toggle__mode-icon toggle__mode-icon--train"></span>
+              </span> -->
+              
+              <!-- <span class="toggle__mode toggle__mode--play">Play
+                <span class="toggle__mode-icon toggle__mode-icon--play"></span></span> -->
+              </label>
+            <span>Таблица</span>
+          </div>
           <div class="filter__level-select">
             <select>
               <option value="hide">По статусу</option>
