feat: hide left panel

--- a/src/index.html
+++ b/src/index.html
@@ -76,9 +76,9 @@
 
       </aside>
 
-      <section class="map" id="map"></section>
+      <section class="map hidden" id="map"></section>
 
-      <section class="table-wrapper hidden">
+      <section class="table-wrapper ">
         <table class="table table-hover" id="table"></table>
       </section>
 
