--- a/src/index.html
+++ b/src/index.html
@@ -25,17 +25,10 @@
       <main class="page" id="wrap">
         <div class="filter" id="filter">
           <div class="toggle" id="toggle">
-            <span>Карта</span>
+            <span class="toggle__text">Карта</span>
             <input type="checkbox" id="toggle-input" class="toggle__input">
-            <label for="toggle-input" class="toggle__label">
-              <!-- <span class="toggle__mode toggle__mode--train">Train
-                <span class="toggle__mode-icon toggle__mode-icon--train"></span>
-              </span> -->
-              
-              <!-- <span class="toggle__mode toggle__mode--play">Play
-                <span class="toggle__mode-icon toggle__mode-icon--play"></span></span> -->
-              </label>
-            <span>Таблица</span>
+            <label for="toggle-input" class="toggle__label"></label>
+            <span class="toggle__text">Таблица</span>
           </div>
           <div class="filter__level-select">
             <select>
@@ -61,7 +54,7 @@
         
         <div class="page__right" id="right_panel">
           <div class="map hidden" id="map"></div>
-          <div class="page__right-table">
+          <div class="page__right-table" id="table-container">
             <table class="table table-hover " id="table"></table>
           </div>
         </div>
