--- a/src/index.html
+++ b/src/index.html
@@ -22,7 +22,7 @@
 
         <div class="sidebar__find-wrap">
           <div class="find__wrap">
-            <form class='find__form' id='find-action'>
+            <form class='find__form' id='findForm'>
               <input id="find-input" type="text" placeholder="Поиск...">
               <button type="submit"><i class="fas fa-search-location"></i></button>
             </form>
