feat: implement smooth page toggling

--- a/src/index.html
+++ b/src/index.html
@@ -83,11 +83,13 @@
 
       </aside>
 
-      <section class="map" id="map"></section>
-
-      <section class="table-wrapper hidden" id="table-container">
-        <table class="table table-hover" id="table"></table>
-      </section>
+      <div class="app__content" id="app-wrapper">
+        <section class="map" id="map"></section>
+        
+        <section class="table-wrapper" id="table-container">
+          <table class="table table-hover" id="table"></table>
+        </section>
+      </div>
 
     </main>
     <footer class="footer">
