feat: add scroll to the table, update tg link

--- a/src/index.html
+++ b/src/index.html
@@ -87,7 +87,7 @@
           <button type="button" data-action='reset' class="btn btn-danger btn-reset">Сбросить</button>
         </div>
 
-        <a class="btn btn-primary sidebar__link" href="tg://resolve?domain=NikName">
+        <a class="btn btn-primary sidebar__link" href="https://t.me/antimusor_bot" target="_blank">
           <span class="sidebar__link-text">Сообщить о проблеме </span>
           <img class="sidebar__link-icon" src="./images/telegram.png" alt="telegram">
         </a>
