feat: add start preloader

--- a/src/index.html
+++ b/src/index.html
@@ -66,8 +66,6 @@
               <option value="done">Сделано</option>
               <option value="pending">В работе</option>
               <option value="new">Получено</option>
-
-
             </select>
           </div>
         </div>
@@ -94,9 +92,8 @@
       </aside>
 
       <div class="app__content" id="app-wrapper">
-
+        <div class="preloader" id='preloader'></div>
         <section class="map" id="map"></section>
-
         <section class="table-wrapper" id="table-container">
           <table class="table table-hover" id="table"></table>
         </section>
