--- a/src/index.html
+++ b/src/index.html
@@ -101,39 +101,39 @@
 
     </main>
     <footer class="footer">
+      
       <div class="cont footer__cont">
-        <ul class="footer__copy-list">
-          <li class="footer__copy-item">
-            <a href="https://github.com/mrmamont2011" class="footer__link" target="_blank">
-              <span class="footer__author">mrmamont</span>
-              <img src="./images/github.png" alt="github" class="footer__link-img">
-            </a>
-          </li>
-          <li class="footer__copy-item">
-            <a href="https://github.com/nikitashamkut" class="footer__link" target="_blank">
-              <span class="footer__author">nikitashamkut</span>
-              <img src="./images/github.png" alt="github" class="footer__link-img">
-            </a>
-          </li>
-          <li class="footer__copy-item">
-            <a href="https://github.com/Kvadeck" class="footer__link" target="_blank">
-              <span class="footer__author">Kvadeck</span>
-              <img src="./images/github.png" alt="github" class="footer__link-img">
-            </a>
-          </li>
-          <li class="footer__copy-item">
-            <a href="https://github.com/Suzie33" class="footer__link" target="_blank">
-              <span class="footer__author">Valentina Ponamareva</span>
-              <img src="./images/github.png" alt="github" class="footer__link-img">
-            </a>
-          </li>
-        </ul>
+        <div class="footer__links-wrap">
+
+          <span class="footer__info">2021</span>
+
+          <a href="https://github.com/mrmamont2011" class="footer__link" target="_blank">
+            <img src="./images/github.svg" alt="github" class="footer__link-img">
+            <span class="footer__author">mrmamont</span>
+          </a>
+
+          <a href="https://github.com/nikitashamkut" class="footer__link" target="_blank">
+            <img src="./images/github.svg" alt="github" class="footer__link-img">
+            <span class="footer__author">nikitashamkut</span>
+          </a>
+
+          <a href="https://github.com/Kvadeck" class="footer__link" target="_blank">
+            <img src="./images/github.svg" alt="github" class="footer__link-img">
+            <span class="footer__author">kvadeck</span>
+          </a>
+
+          <a href="https://github.com/Suzie33" class="footer__link" target="_blank">
+            <img src="./images/github.svg" alt="github" class="footer__link-img">
+            <span class="footer__author">suzie33</span>
+          </a>
+        </div>
+
         <div class="footer__course">
-          <a href="https://rs.school/js/" class="footer__link" target="_blank">
+          <a href="https://rs.school/js/" target="_blank">
             <img src="./images/rs_school_js.svg" alt="rs_school" class="footer__link-img--rsschool">
           </a>
         </div>
-        <span class="footer__info">2021</span>
+
       </div>
     </footer>
   </div>
