--- a/src/index.html
+++ b/src/index.html
@@ -101,35 +101,34 @@
 
     </main>
     <footer class="footer">
-      
+
       <div class="cont footer__cont">
         <div class="footer__links-wrap">
 
           <span class="footer__info">2021</span>
 
-          <a href="https://github.com/mrmamont2011" class="footer__link" target="_blank">
-            <img src="./images/github.svg" alt="github" class="footer__link-img">
-            <span class="footer__author">mrmamont</span>
-          </a>
-
-          <a href="https://github.com/nikitashamkut" class="footer__link" target="_blank">
-            <img src="./images/github.svg" alt="github" class="footer__link-img">
-            <span class="footer__author">nikitashamkut</span>
-          </a>
-
-          <a href="https://github.com/Kvadeck" class="footer__link" target="_blank">
-            <img src="./images/github.svg" alt="github" class="footer__link-img">
-            <span class="footer__author">kvadeck</span>
-          </a>
-
-          <a href="https://github.com/Suzie33" class="footer__link" target="_blank">
-            <img src="./images/github.svg" alt="github" class="footer__link-img">
-            <span class="footer__author">suzie33</span>
-          </a>
+          <ul class="footer__team-list">
+            <li><a href="https://github.com/mrmamont2011" class="footer__link" target="_blank">
+                <img src="./images/github.svg" alt="github" class="footer__link-img">
+                <span class="footer__author">mrmamont</span>
+              </a></li>
+            <li><a href="https://github.com/nikitashamkut" class="footer__link" target="_blank">
+                <img src="./images/github.svg" alt="github" class="footer__link-img">
+                <span class="footer__author">nikitashamkut</span>
+              </a></li>
+            <li><a href="https://github.com/Kvadeck" class="footer__link" target="_blank">
+                <img src="./images/github.svg" alt="github" class="footer__link-img">
+                <span class="footer__author">kvadeck</span>
+              </a></li>
+            <li><a href="https://github.com/Suzie33" class="footer__link" target="_blank">
+                <img src="./images/github.svg" alt="github" class="footer__link-img">
+                <span class="footer__author">suzie33</span>
+              </a></li>
+          </ul>
         </div>
 
         <div class="footer__course">
-          <a href="https://rs.school/js/" target="_blank">
+          <a href="https://rs.school/js/" class="footer__link" target="_blank">
             <img src="./images/rs_school_js.svg" alt="rs_school" class="footer__link-img--rsschool">
           </a>
         </div>
